--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
   },
   "dependencies": {
     "mqtt": "^2.13.0",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "@iobroker/adapter-core": "^1.0.3"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "mocha": "^4.1.0",
-    "chai": "^4.1.2",
-    "@iobroker/adapter-core": "^1.0.3"
+    "chai": "^4.1.2"
   }
 }
