--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "url": "git+https://github.com/MeisterTR/ioBroker.kress.git"
   },
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha --exit"
+    "test": "npm run test:package && npm run test:unit",
+    "test:package": "mocha test/package --exit",
+    "test:unit": "mocha test/unit --exit",
+    "test:integration": "mocha test/integration --exit"
   },
   "dependencies": {
     "mqtt": "^2.13.0",
@@ -39,6 +42,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "mocha": "^4.1.0",
-    "chai": "^4.1.2"
+    "chai": "^4.1.2",
+    "@iobroker/testing": "^1.1.10"
   }
 }
